# Nltk_code

./: README.md  lec_01.ipynb  pyproject.toml  rag_pipline.ipynb  readme.md  text_on.ipynb  text_on_image.md
